origami-engine/tests/trybuild/fail/should_fail_when_html_esape_is_disabled_and_noescape_is_used_in_comp_call.rs
use origami_engine::comp;

fn main() {
    comp! {
        bar =>
        div {

        }
    }

    comp! {
        foo =>
        @bar!();!
    }
    foo!();
}
